--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "out/src",
     "src"
   ],
-  "repository": "https://github.com/bitcoin-sv/uhrp-storage-server",
-  "author": "BSV Association",
+  "repository": "https://github.com/ty-everett/lite-storage-server",
+  "author": "Ty Everett",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@bsv/auth-express-middleware": "^1.2.1",
-    "@bsv/payment-express-middleware": "^1.2.1",
-    "@bsv/sdk": "^1.6.16",
-    "@bsv/wallet-toolbox-client": "^1.5.12",
+    "@bsv/auth-express-middleware": "^1.2.3",
+    "@bsv/payment-express-middleware": "^1.2.3",
+    "@bsv/sdk": "^1.6.22",
+    "@bsv/wallet-toolbox-client": "^1.5.20",
     "axios": "^0.21.1",
     "body-parser": "^1.20.1",
     "dotenv": "^16.4.7",
